--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     </head>
     <body>
-        <h1> Teofimo Lopez (The TakeOver) fight reviews</h1>
+        <h1> Teofimo Lopez TakeOver</h1>
 
        <p>Besides Gervonta Davis, Shakur Stevenson, and Devin Haney. 
         Teofimo Lopez could arguably have the better resume of these three.
