--- a/review1.html
+++ b/review1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teo vs Commey</title>
+    <title>Teofimo Lopez vs Richard Commey</title>
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body id="review1">
