--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <img src="https://media.tenor.com/818yVIpV940AAAAC/teofimo-lopez.gif"/>
      <p>
-        To learn more about Teofimo and his journey you can check out his youtube channel 
+        To learn more about the TakeOver and his journey you can check out his youtube channel 
         <a href=https://www.youtube.com/@takeoverproductions>here.</a>
 
      </p>
