--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
     </head>
     <body>
-        <h1> Teofimo Lopez TakeOver</h1>
+        <h1> Teofimo Lopez The TakeOver</h1>
 
-       <p>Besides Gervonta Davis, Shakur Stevenson, and Devin Haney. 
-        Teofimo Lopez could arguably have the better resume of these three.
-        The three links below will have three of the greatest victories 
-        that put Teofimo on the map!</p> 
+       <p>Teofimo Lopez is definitely one of the best champions out there he was argubley 2 
+        times undisputed
+
+       </p> 
 
 
         <img src="https://media.tenor.com/818yVIpV940AAAAC/teofimo-lopez.gif"/>
